force-app/main/default/objects/AI_Intent_Action__c/AI_Intent_Action__c.object-meta.xml
<CustomObject>
    <label>AI Intent Action</label>
    <nameField>
        <displayFormat>AIA-{0000}</displayFormat>
        <label>AI Intent Action Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AI Intent Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>