force-app/main/default/objects/AI_Intent_Action__c/fields/Action_Type__c.field-meta.xml
<CustomField>
    <fullName>Action_Type__c</fullName>
    <label>Action Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Canned Response</fullName>
            </value>
            <value>
                <fullName>Update Field</fullName>
            </value>
            <value>
                <fullName>Create Record</fullName>
            </value>
            <value>
                <fullName>Invoke Agent</fullName>
            </value>
            <value>
                <fullName>Flow</fullName>
            </value>
            <value>
                <fullName>Apex</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>