force-app/main/default/objects/AI_Intent_Action__c/fields/AI_Agent_Intent__c.field-meta.xml
<CustomField>
    <fullName>AI_Agent_Intent__c</fullName>
    <label>AI Agent Intent</label>
    <referenceTo>AI_Agent_Intent__c</referenceTo>
    <relationshipLabel>AI Intent Actions</relationshipLabel>
    <relationshipName>AI_Intent_Actions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>