force-app/main/default/objects/AI_Intent_Action__c/fields/Apex_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Apex_Class_Name__c</fullName>
    <description>Fully qualified Apex class name that implements AIIntentActionInterface. Required when Action Type is &quot;Apex&quot;.</description>
    <inlineHelpText>Enter the API name of the Apex class that implements AIIntentActionInterface. Example: MyIntentHandler</inlineHelpText>
    <label>Apex Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>