force-app/main/default/objects/AI_Intent_Action__c/fields/Apex_Return_Type__c.field-meta.xml
<CustomField>
    <fullName>Apex_Return_Type__c</fullName>
    <description>Determines how the Apex class result is handled. &quot;Replace Message&quot; replaces the AI response entirely. &quot;Append to Message&quot; adds the Apex result after the AI response.</description>
    <inlineHelpText>Choose how the Apex result should be combined with the AI response message.</inlineHelpText>
    <label>Apex Return Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Replace Message</fullName>
                <default>true</default>
                <label>Replace Message</label>
            </value>
            <value>
                <fullName>Append to Message</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>