force-app/main/default/objects/AI_Intent_Action__c/fields/Canned_Response__c.field-meta.xml
<CustomField>
    <fullName>Canned_Response__c</fullName>
    <description>The pre-defined canned response text that will be used when this action is triggered. Only applicable when Action Type is Canned Response.</description>
    <inlineHelpText>Enter the canned response text that will be sent when this action is triggered.</inlineHelpText>
    <label>Canned Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>