force-app/main/default/objects/AI_Intent_Action__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Instructions for AI on what parameters to extract from user message. Example: Extract the Case priority value from the user message. Return as priority field.</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>