force-app/main/default/objects/AI_Intent_Action__c/fields/Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_API_Name__c</fullName>
    <description>API name of the target field for Update Field action.</description>
    <label>Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>