force-app/main/default/objects/AI_Intent_Action__c/fields/Flow_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Flow_API_Name__c</fullName>
    <description>API name of the Autolaunched Flow to invoke. Required when Action Type is &quot;Flow&quot;.</description>
    <inlineHelpText>Enter the API name of an active Autolaunched Flow. Example: My_Intent_Flow</inlineHelpText>
    <label>Flow API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>