force-app/main/default/objects/AI_Intent_Action__c/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <description>Language for the canned response (ISO 639-1 codes). Only applicable when Action Type is Canned Response.</description>
    <inlineHelpText>Select the language for this canned response.</inlineHelpText>
    <label>Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>en</fullName>
                <default>true</default>
                <label>English</label>
            </value>
            <value>
                <fullName>es</fullName>
                <label>Spanish</label>
            </value>
            <value>
                <fullName>fr</fullName>
                <label>French</label>
            </value>
            <value>
                <fullName>de</fullName>
                <label>German</label>
            </value>
            <value>
                <fullName>pt</fullName>
                <label>Portuguese</label>
            </value>
            <value>
                <fullName>it</fullName>
                <label>Italian</label>
            </value>
            <value>
                <fullName>nl</fullName>
                <label>Dutch</label>
            </value>
            <value>
                <fullName>ja</fullName>
                <label>Japanese</label>
            </value>
            <value>
                <fullName>zh</fullName>
                <label>Chinese</label>
            </value>
            <value>
                <fullName>ko</fullName>
                <label>Korean</label>
            </value>
            <value>
                <fullName>ar</fullName>
                <label>Arabic</label>
            </value>
            <value>
                <fullName>ru</fullName>
                <label>Russian</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>