force-app/main/default/objects/AI_Intent_Action__c/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <description>API name of the target object for Update Field or Create Record actions.</description>
    <label>Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>