force-app/main/default/objects/AI_Intent_Action__c/validationRules/Apex_Class_Name_Required_For_Apex_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Apex_Class_Name_Required_For_Apex_Type</fullName>
    <active>true</active>
    <description>Ensures that Apex Class Name is provided when Action Type is set to Apex.</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Action_Type__c, &apos;Apex&apos;),
    ISBLANK(Apex_Class_Name__c)
)</errorConditionFormula>
    <errorDisplayField>Apex_Class_Name__c</errorDisplayField>
    <errorMessage>Apex Class Name is required when Action Type is &quot;Apex&quot;. Please enter the API name of the Apex class that implements AIIntentActionInterface.</errorMessage>
</ValidationRule>